--- a/Example/Podfile
+++ b/Example/Podfile
@@ -6,6 +6,7 @@ platform :ios, '9.0'
 
 target 'HelloPodTest_Example' do
   pod 'HelloPodTest', :path => '../'
+#  pod 'HelloPodTest', :git => 'git@github.com:CLJian/TestPodConfig.git'
   pod 'AFNetworking'
 
   target 'HelloPodTest_Tests' do
